--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -1,9 +1,9 @@
 <div class="sidebar-wrapper group">
   <!-- <div id="bodyOverlay" class="w-screen h-screen fixed top-0 bg-slate-900 bg-opacity-50 z-10 hidden pointer-events-none"></div> -->
   <div class="logo-segment">
-    <a class="flex items-center" href="../index.html">
-      <img src="../assets/images/all-img/bungaoren.png" class="black_logo" alt="logo" width="40" height="40">
-      <img src="../assets/images/all-img/bungaputih.png" class="white_logo" alt="logo" width="40" height="40">
+    <a class="flex items-center" href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.3/index.html">
+      <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaoren.png" class="black_logo" alt="logo" width="40" height="40">
+      <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaputih.png" class="white_logo" alt="logo" width="40" height="40">
       <span class="ltr:ml-3 rtl:mr-3 text-xl font-Inter font-bold text-slate-900 dark:text-white">PMB ULBI</span>
     </a>
     <!-- Sidebar Type Button -->
@@ -25,7 +25,7 @@
     <ul class="sidebar-menu">
       <li class="sidebar-menu-title">Menu Utama</li>
       <li class="">
-        <a href="pmb-mhs/index.html" class="navItem">
+        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.3/index.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:home"></iconify-icon>
         <span>Dashboard</span>
@@ -36,7 +36,7 @@
       <!-- Informartion Area -->
       <li class="sidebar-menu-title">Informasi Pribadi</li>
       <li class="">
-        <a href="pmb-mhs/datadiri/datadiri.html" class="navItem">
+        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.3/datadiri/datadiri.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:user"></iconify-icon>
         <span>Biodata</span>
@@ -44,7 +44,7 @@
         </a>
       </li>
       <li class="">
-        <a href="pmb-mhs/kuesioner/kuesioner.html" class="navItem">
+        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.3/kuesioner/kuesioner.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:archive"></iconify-icon>
         <span>Isi Kuesioner</span>
@@ -52,7 +52,7 @@
         </a>
       </li>
       <li>
-        <a href="pmb-mhs/under-maintanance.html" class="navItem">
+        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.3/under-maintanance.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class="nav-icon" icon="heroicons-outline:clipboard-list"></iconify-icon>
         <span>General Test Online</span>
@@ -60,7 +60,7 @@
         </a>
       </li>
       <li class="">
-        <a href="pmb-mhs/kelulusan/lulus.html" class="navItem">
+        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.3/kelulusan/lulus.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:speakerphone"></iconify-icon>
         <span>Check Kelulusan</span>
@@ -68,7 +68,7 @@
         </a>
       </li>
       <li class="">
-        <a href="pmb-mhs/pembayaran/persetujuan.html" class="navItem">
+        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.3/pembayaran/persetujuan.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:credit-card"></iconify-icon>
         <span>Pembayaran</span>
@@ -76,7 +76,7 @@
         </a>
       </li>
       <li class="">
-        <a href="pmb-mhs/daftarulang/daftarulang.html" class="navItem">
+        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.3/daftarulang/daftarulang.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:cloud-upload"></iconify-icon>
         <span>Daftar Ulang</span>
@@ -85,7 +85,7 @@
       </li>
     <!-- Upgrade Your Business Plan Card Start -->
     <div class="bg-slate-900 mb-10 mt-24 p-4 relative text-center rounded-2xl text-white" id="sidebar_bottom_wizard">
-      <img src="../assets/images/svg/rabit.svg" alt="" class="mx-auto relative -mt-[73px]">
+      <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/svg/rabit.svg" alt="" class="mx-auto relative -mt-[73px]">
       <div class="max-w-[160px] mx-auto mt-6">
         <div class="widget-title font-Inter mb-1">PMB ULBI</div>
         <div class="text-xs font-light font-Inter">
