--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -110,5 +110,5 @@
 
 <!-- End: Settings -->
   <div id="jsimport">
-    <script src="../app.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.0.5/app.js"></script>
   </div>
