--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar-wrapper group">
   <!-- <div id="bodyOverlay" class="w-screen h-screen fixed top-0 bg-slate-900 bg-opacity-50 z-10 hidden pointer-events-none"></div> -->
   <div class="logo-segment">
-    <a class="flex items-center" href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.6/index.html">
+    <a class="flex items-center" href="https://pmb.ulbi.ac.id/pmb-mhs/index.html">
       <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaoren.png" class="black_logo" alt="logo" width="40" height="40">
       <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaputih.png" class="white_logo" alt="logo" width="40" height="40">
       <span class="ltr:ml-3 rtl:mr-3 text-xl font-Inter font-bold text-slate-900 dark:text-white">PMB ULBI</span>
@@ -25,7 +25,7 @@
     <ul class="sidebar-menu">
       <li class="sidebar-menu-title">Menu Utama</li>
       <li class="">
-        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.6/index.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/index.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:home"></iconify-icon>
         <span>Dashboard</span>
@@ -36,7 +36,7 @@
       <!-- Informartion Area -->
       <li class="sidebar-menu-title">Informasi Pribadi</li>
       <li class="">
-        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.6/datadiri/datadiri.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/datapribadi.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:user"></iconify-icon>
         <span>Biodata</span>
@@ -44,7 +44,7 @@
         </a>
       </li>
       <li class="">
-        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.6/kuesioner/kuesioner.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/kuesioner/kuesioner.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:archive"></iconify-icon>
         <span>Isi Kuesioner</span>
@@ -52,7 +52,7 @@
         </a>
       </li>
       <li>
-        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.6/under-maintanance.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/under-maintanance.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class="nav-icon" icon="heroicons-outline:clipboard-list"></iconify-icon>
         <span>General Test Online</span>
@@ -60,7 +60,7 @@
         </a>
       </li>
       <li class="">
-        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.6/kelulusan/lulus.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/kelulusan/lulus.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:speakerphone"></iconify-icon>
         <span>Check Kelulusan</span>
@@ -68,7 +68,7 @@
         </a>
       </li>
       <li class="">
-        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.6/pembayaran/persetujuan.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/pembayaran/persetujuan.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:credit-card"></iconify-icon>
         <span>Pembayaran</span>
@@ -76,7 +76,7 @@
         </a>
       </li>
       <li class="">
-        <a href="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.6/daftarulang/daftarulang.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/daftarulang/daftarulang.html" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:cloud-upload"></iconify-icon>
         <span>Daftar Ulang</span>
