--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -8,9 +8,9 @@
     </a>
     <!-- Sidebar Type Button -->
     <div id="sidebar_type" class="cursor-pointer text-slate-900 dark:text-white text-lg">
-      <span class="sidebarDotIcon extend-icon cursor-pointer text-slate-900 dark:text-white text-2xl">
+      <!-- <span class="sidebarDotIcon extend-icon cursor-pointer text-slate-900 dark:text-white text-2xl">
     <div class="h-4 w-4 border-[1.5px] border-slate-900 dark:border-slate-700 rounded-full transition-all duration-150 ring-2 ring-inset ring-offset-4 ring-black-900 dark:ring-slate-400 bg-slate-900 dark:bg-slate-400 dark:ring-offset-slate-700"></div>
-  </span>
+  </span> -->
       <span class="sidebarDotIcon collapsed-icon cursor-pointer text-slate-900 dark:text-white text-2xl">
     <div class="h-4 w-4 border-[1.5px] border-slate-900 dark:border-slate-700 rounded-full transition-all duration-150"></div>
   </span>
@@ -110,5 +110,5 @@
 
 <!-- End: Settings -->
   <div id="jsimport">
-    <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.0.6/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.0.9/app.js"></script>
   </div>
