--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -111,8 +111,8 @@
     <div class="flex justify-between items-center h-full">
       <div class="flex items-center md:space-x-4 space-x-2 xl:space-x-0 rtl:space-x-reverse vertical-box">
         <a href="index.html" class="mobile-logo xl:hidden inline-block">
-          <img src="assets/images/all-img/bungaoren.png" class="black_logo" alt="logo" width="40" height="40">
-          <img src="assets/images/all-img/bungaputih.png" class="white_logo" alt="logo" alt="logo" width="40" height="40">
+          <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaoren.png" class="black_logo" alt="logo" width="40" height="40">
+          <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaputih.png" class="white_logo" alt="logo" alt="logo" width="40" height="40">
         </a>
         <button class="smallDeviceMenuController hidden md:inline-block xl:hidden">
           <iconify-icon class="leading-none bg-transparent relative text-xl top-[2px] text-slate-900 dark:text-white" icon="heroicons-outline:menu-alt-3"></iconify-icon>
@@ -129,12 +129,12 @@ rtl:space-x-reverse search-modal" data-bs-toggle="modal" data-bs-target="#search
       <div class="items-center space-x-4 rtl:space-x-reverse horizental-box">
         <a href="index.html">
           <span class="xl:inline-block hidden">
-        <img src="assets/images/all-img/bungaoren.png" class="black_logo " alt="logo"width="40" height="40">
-        <img src="assets/images/all-img/bungaputih.png" class="white_logo" alt="logo" width="40" height="40">
+        <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaoren.png" class="black_logo " alt="logo"width="40" height="40">
+        <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaputih.png" class="white_logo" alt="logo" width="40" height="40">
     </span>
                   <span class="xl:hidden inline-block">
-        <img src="assets/images/all-img/bungaoren.png" class="black_logo " alt="logo" width="40" height="40">
-        <img src="assets/images/all-img/bungaputih.png" class="white_logo " alt="logo" width="40" height="40">
+        <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaoren.png" class="black_logo " alt="logo" width="40" height="40">
+        <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/bungaputih.png" class="white_logo " alt="logo" width="40" height="40">
     </span>
         </a>
         <button class="smallDeviceMenuController  open-sdiebar-controller xl:hidden inline-block">
@@ -168,7 +168,7 @@ rtl:space-x-reverse search-modal" data-bs-toggle="modal" data-bs-target="#search
           <button class="text-slate-800 dark:text-white focus:ring-0 focus:outline-none font-medium rounded-lg text-sm text-center
 inline-flex items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <div class="lg:h-8 lg:w-8 h-7 w-7 rounded-full flex-1 ltr:mr-[10px] rtl:ml-[10px]">
-              <img src="assets/images/all-img/user.png" alt="user" class="block w-full h-full object-cover rounded-full">
+              <img src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.0.1/assets/images/all-img/user.png" alt="user" class="block w-full h-full object-cover rounded-full">
             </div>
             <span class="flex-none text-slate-600 dark:text-white text-sm font-normal items-center lg:flex hidden overflow-hidden text-ellipsis whitespace-nowrap">Albert Flores</span>
             <svg class="w-[16px] h-[16px] dark:text-white hidden lg:inline-block text-base inline-block ml-[10px] rtl:mr-[10px]" aria-hidden="true" fill="none" stroke="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
