--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -36,12 +36,38 @@
       <!-- Informartion Area -->
       <li class="sidebar-menu-title">Informasi Pribadi</li>
       <li class="">
-        <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/datapribadi.html" class="navItem">
+        <a href="#" class="navItem">
           <span class="flex items-center">
-        <iconify-icon class=" nav-icon" icon="heroicons-outline:user"></iconify-icon>
+        <iconify-icon class=" nav-icon" icon="heroicons-outline:home"></iconify-icon>
         <span>Biodata</span>
           </span>
+          <iconify-icon class="icon-arrow" icon="heroicons-outline:chevron-right"></iconify-icon>
         </a>
+        <ul class="sidebar-submenu">
+          <li>
+            <a href="#">Jalur Pendaftaran</a>
+          </li>
+          <li>
+            <a href="#">Pilih Program Studi
+            </a>
+          </li>
+          <li>
+            <a href="#">Data Diri
+            </a>
+          </li>
+          <li>
+            <a href="#">Data Orang Tua
+            </a>
+          </li>
+          <li>
+            <a href="#">Data Sekolah
+            </a>
+          </li>
+          <li>
+            <a href="#">Persyaratan
+            </a>
+          </li>
+        </ul>
       </li>
       <li class="">
         <a href="https://pmb.ulbi.ac.id/pmb-mhs/kuesioner/kuesioner.html" class="navItem">
