add(linktopage) : tambah link untuk ke page tertentu

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -45,26 +45,26 @@
         </a>
         <ul class="sidebar-submenu">
           <li>
-            <a href="#">Jalur Pendaftaran</a>
+            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/jalurpendaftaran.html">Jalur Pendaftaran</a>
           </li>
           <li>
-            <a href="#">Pilih Program Studi
+            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/pilihprodi.html">Pilih Program Studi
             </a>
           </li>
           <li>
-            <a href="#">Data Diri
+            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/biodatadiri.html">Data Diri
             </a>
           </li>
           <li>
-            <a href="#">Data Orang Tua
+            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/biodataorangtua.html">Data Orang Tua
             </a>
           </li>
           <li>
-            <a href="#">Data Sekolah
+            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/biodatasekolah.html">Data Sekolah
             </a>
           </li>
           <li>
-            <a href="#">Persyaratan
+            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/persyaratan.html">Persyaratan
             </a>
           </li>
         </ul>
