update sidebar & footer

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -48,7 +48,7 @@
             <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/jalurpendaftaran.html">Jalur Pendaftaran</a>
           </li>
           <li>
-            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/pilihprodi.html">Pilih Program Studi
+            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/pilihprodi.html">Program Studi
             </a>
           </li>
           <li>
