--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -206,42 +206,42 @@ inline-flex items-center" type="button" data-bs-toggle="dropdown" aria-expanded=
 overflow-hidden">
             <ul class="py-1 text-sm text-slate-800 dark:text-slate-200">
               <li>
-                <a href="index.html" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
+                <a href="#" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
     dark:text-white font-normal">
                   <iconify-icon icon="heroicons-outline:home" class="relative top-[2px] text-lg ltr:mr-1 rtl:ml-1"></iconify-icon>
                   <span class="font-Inter">Dashboard</span>
                 </a>
               </li>
               <li>
-                <a href="chat.html" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
+                <a href="#" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
     dark:text-white font-normal">
                   <iconify-icon icon="heroicons-outline:archive" class="relative top-[2px] text-lg ltr:mr-1 rtl:ml-1"></iconify-icon>
                   <span class="font-Inter">Kuesioner</span>
                 </a>
               </li>
               <li>
-                <a href="404belumregistrasi.html" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
+                <a href="#" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
     dark:text-white font-normal">
                   <iconify-icon icon="heroicons-outline:speakerphone" class="relative top-[2px] text-lg ltr:mr-1 rtl:ml-1"></iconify-icon>
                   <span class="font-Inter">Cek Kelulusan</span>
                 </a>
               </li>
               <li>
-                <a href="pembayaran/persetujuan.html" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
+                <a href="#" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
     dark:text-white font-normal">
                   <iconify-icon icon="heroicons-outline:credit-card" class="relative top-[2px] text-lg ltr:mr-1 rtl:ml-1"></iconify-icon>
                   <span class="font-Inter">Pembayaran</span>
                 </a>
               </li>
               <li>
-                <a href="settings.html" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
+                <a href="#" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
     dark:text-white font-normal">
                   <iconify-icon icon="heroicons-outline:cloud-upload" class="relative top-[2px] text-lg ltr:mr-1 rtl:ml-1"></iconify-icon>
                   <span class="font-Inter">Daftar Ulang</span>
                 </a>
               </li>
               <li>
-                <a href="signin-one.html" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
+                <a href="#" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
     dark:text-white font-normal">
                   <iconify-icon icon="heroicons-outline:login" class="relative top-[2px] text-lg ltr:mr-1 rtl:ml-1"></iconify-icon>
                   <span class="font-Inter">Logout</span>
