--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -38,7 +38,7 @@
       <li class="">
         <a href="#" class="navItem">
           <span class="flex items-center">
-        <iconify-icon class=" nav-icon" icon="heroicons-outline:home"></iconify-icon>
+        <iconify-icon class=" nav-icon" icon="heroicons-outline:user"></iconify-icon>
         <span>Biodata</span>
           </span>
           <iconify-icon class="icon-arrow" icon="heroicons-outline:chevron-right"></iconify-icon>
