inisialisasi button logout & direct link

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -206,14 +206,14 @@ inline-flex items-center" type="button" data-bs-toggle="dropdown" aria-expanded=
 overflow-hidden">
             <ul class="py-1 text-sm text-slate-800 dark:text-slate-200">
               <li>
-                <a href="#" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
+                <a href="https://pmb.ulbi.ac.id/pmb-mhs/index backup.html" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
     dark:text-white font-normal">
                   <iconify-icon icon="heroicons-outline:home" class="relative top-[2px] text-lg ltr:mr-1 rtl:ml-1"></iconify-icon>
                   <span class="font-Inter">Dashboard</span>
                 </a>
               </li>
               <li>
-                <a href="#" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
+                <a href="https://pmb.ulbi.ac.id/pmb-mhs/kuesioner/kuesioner.html" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
     dark:text-white font-normal">
                   <iconify-icon icon="heroicons-outline:archive" class="relative top-[2px] text-lg ltr:mr-1 rtl:ml-1"></iconify-icon>
                   <span class="font-Inter">Kuesioner</span>
@@ -241,7 +241,7 @@ overflow-hidden">
                 </a>
               </li>
               <li>
-                <a href="#" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
+                <a href="#" id="logoutBtn" class="block px-4 py-2 hover:bg-slate-100 dark:hover:bg-slate-600 dark:hover:text-white font-inter text-sm text-slate-600
     dark:text-white font-normal">
                   <iconify-icon icon="heroicons-outline:login" class="relative top-[2px] text-lg ltr:mr-1 rtl:ml-1"></iconify-icon>
                   <span class="font-Inter">Logout</span>
