edit(url):ganti web ulbi ke admission

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -119,7 +119,7 @@
         </div>
       </div>
       <div class="mt-6">
-        <a href="https://www.ulbi.ac.id/" target="_blank">
+        <a href="https://admission.ulbi.ac.id/" target="_blank">
         <button class="bg-white hover:bg-opacity-80 text-slate-900 text-sm font-Inter rounded-md w-full block py-2 font-medium">
           ULBI
         </button>
