--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -86,7 +86,7 @@
         </a>
       </li>
       <li class="">
-        <a href="https://pmb.ulbi.ac.id/pmb-mhs/kelulusan/lulus.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/kelulusan/" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:speakerphone"></iconify-icon>
         <span>Check Kelulusan</span>
