fix(url):ganti url persyaratan

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -64,7 +64,7 @@
             </a>
           </li>
           <li>
-            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/persyaratan.html">Persyaratan
+            <a href="https://pmb.ulbi.ac.id/pmb-mhs/persyaratan/">Persyaratan
             </a>
           </li>
         </ul>
