--- a/static/footer.html
+++ b/static/footer.html
@@ -16,6 +16,6 @@
     </div>
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.1.3/app/app.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.2.7/bar/sidebar.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.0.7/theme.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.1.3/static/theme/app/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.1.3/static/theme/bar/sidebar.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.1.3/static/theme/theme.js"></script>
