--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -133,6 +133,6 @@
 <!-- End: Sidebar -->
 <!-- End: Settings -->
   <div id="jsimport">
-    <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.1.3/app/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.1.3/bar/theme.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.1.3/static/theme/app/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.1.3/static/theme/theme.js"></script>
   </div>
