update(redirect):ke index.html

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -70,7 +70,7 @@
         </ul>
       </li>
       <li class="">
-        <a href="https://pmb.ulbi.ac.id/pmb-mhs/kuesioner/kuesioner.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/kuesioner/" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:archive"></iconify-icon>
         <span>Isi Kuesioner</span>
@@ -94,7 +94,7 @@
         </a>
       </li>
       <li class="">
-        <a href="https://pmb.ulbi.ac.id/pmb-mhs/pembayaran/persetujuan.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/pembayaran/" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:credit-card"></iconify-icon>
         <span>Pembayaran</span>
@@ -102,7 +102,7 @@
         </a>
       </li>
       <li class="">
-        <a href="https://pmb.ulbi.ac.id/pmb-mhs/daftarulang/daftarulang.html" class="navItem">
+        <a href="https://pmb.ulbi.ac.id/pmb-mhs/daftarulang/" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:cloud-upload"></iconify-icon>
         <span>Daftar Ulang</span>
