Update footer.html:remove js yang ga kepake

--- a/static/footer.html
+++ b/static/footer.html
@@ -9,13 +9,9 @@
         <div class="ltr:md:text-right rtl:md:text-end text-center text-sm">
           Hand-crafted &amp; Made by
           <a href="#" target="_blank" class="text-primary-500 font-semibold">
-            DTI ULBI
+            Directorate of Information Technology
           </a>
         </div>
       </div>
     </div>
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.1.3/static/theme/app/app.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.1.3/static/theme/bar/sidebar.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/pmb-mhs@0.1.3/static/theme/theme.js"></script>
