--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -132,3 +132,7 @@
 <!-- End: Sidebar -->
 <!-- End: Sidebar -->
 <!-- End: Settings -->
+<div id="jsimport">
+  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.4.1/app/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.4.1/bar/theme.js"></script>
+</div>
