--- a/static/footer.html
+++ b/static/footer.html
@@ -15,3 +15,6 @@
       </div>
     </div>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.4.2/app/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.4.2/theme.js"></script>
