add(sidebar):add sidebar

--- a/static/footer.html
+++ b/static/footer.html
@@ -17,4 +17,5 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.4.2/app/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.4.2/bar/sidebar.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.4.2/theme.js"></script>
