fix: remove import

--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -132,7 +132,7 @@
 <!-- End: Sidebar -->
 <!-- End: Sidebar -->
 <!-- End: Settings -->
-<div id="jsimport">
+<!-- <div id="jsimport">
   <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.4.5/app/app.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/PMBULBI/javascript-fe@0.4.5/bar/theme.js"></script>
-</div>
+</div> -->
