--- a/static/sidebar.html
+++ b/static/sidebar.html
@@ -39,32 +39,41 @@
         <a href="#" class="navItem">
           <span class="flex items-center">
         <iconify-icon class=" nav-icon" icon="heroicons-outline:user"></iconify-icon>
-        <span>Biodata</span>
+        <span>Biodata
+          <span class="badge-warning" style="font-size: 7.5px; background-color: #ff8700; color: white; padding: 2px 4px; border-radius: 5px;">Belum Diisi</span>
+        </span>
           </span>
           <iconify-icon class="icon-arrow" icon="heroicons-outline:chevron-right"></iconify-icon>
         </a>
         <ul class="sidebar-submenu">
           <li>
-            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/jalurpendaftaran.html">Jalur Pendaftaran</a>
+            <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/jalurpendaftaran.html">Jalur Pendaftaran
+              <span class="badge-warning" style="font-size: 7.5px; background-color: #ff8700; color: white; padding: 2px 4px; border-radius: 5px;">Belum Diisi</span>
+            </a>
           </li>
           <li>
             <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/pilihprodi.html">Program Studi
+              <span class="badge-warning" style="font-size: 7.5px; background-color: #ff8700; color: white; padding: 2px 4px; border-radius: 5px;">Belum Diisi</span>
             </a>
           </li>
           <li>
             <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/biodatadiri.html">Data Diri
+              <span class="badge-warning" style="font-size: 7.5px; background-color: #ff8700; color: white; padding: 2px 4px; border-radius: 5px;">Belum Diisi</span>
             </a>
           </li>
           <li>
             <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/biodataorangtua.html">Data Orang Tua
+              <span class="badge-warning" style="font-size: 7.5px; background-color: #ff8700; color: white; padding: 2px 4px; border-radius: 5px;">Belum Diisi</span>
             </a>
           </li>
           <li>
             <a href="https://pmb.ulbi.ac.id/pmb-mhs/datadiri/biodatasekolah.html">Data Sekolah
+              <span class="badge-warning" style="font-size: 7.5px; background-color: #ff8700; color: white; padding: 2px 4px; border-radius: 5px;">Belum Diisi</span>
             </a>
           </li>
           <li>
             <a href="https://pmb.ulbi.ac.id/pmb-mhs/persyaratan/">Persyaratan
+              <span class="badge-warning" style="font-size: 7.5px; background-color: #ff8700; color: white; padding: 2px 4px; border-radius: 5px;">Belum Diisi</span>
             </a>
           </li>
         </ul>
